force-app/main/default/objects/Delivery_Category_Benchmarks__c/Delivery_Category_Benchmarks__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Delivery Category Benchmarks</label>
</CustomObject>