force-app/main/default/objects/Delivery_Category_Benchmarks__c/fields/Delivery_Category__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Category__c</fullName>
    <label>Delivery Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>