force-app/main/default/objects/Delivery_Category_Benchmarks__c/fields/Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Man_Hours__c</fullName>
    <label>Man Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>